examples/test/testpolicy4031.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4031
  namespace: namespace434
spec:
  podSelector:
    matchLabels:
      key46: value13
      key25: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value43
          key30: value4
      podSelector:
        matchLabels:
          key7: value5
          key29: value25
